# Harmony

./: LICENSE  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
patches/: @slate-solid__core.patch
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/auth/: LoginScreen.tsx
src/components/layout/: ChannelList.tsx  ContextMenu.tsx  DmList.tsx  Generic.tsx  MemberList.tsx  ServerList.tsx  Sidebar.tsx  Skeleton.tsx  TitleBar.tsx
src/components/layout/menus/: ChannelContextMenu.tsx  ContextMenuPrimitives.tsx  MessageContextMenu.tsx  (+2 more)
src/components/messages/: MessageAttachment.tsx  MessageInput.tsx  MessageList.tsx  PendingRepliesBar.tsx  TypingIndicator.tsx
src/components/svgs/: RulesChannel.tsx  RulesChannelLocked.tsx  TextChannel.tsx  TextChannelLocked.tsx  VoiceChannel.tsx  VoiceChannelLocked.tsx
src/lib/api/: AuthApi.ts  ChannelApi.ts  DmApi.ts  Http.ts  MessageApi.ts  ServerApi.ts  SignalrClient.ts  SocialApi.ts  TranslateApi.ts  UserApi.ts  authApi.ts  channelApi.ts  dmApi.ts  http.ts  messageApi.ts  serverApi.ts  signalrClient.ts  socialApi.ts  userApi.ts  websocketClient.ts
src/lib/client/: GatewayClient.ts  Init.ts  init.ts
src/lib/i18n/: Index.ts  LocaleMap.ts  Schema.ts  index.ts  schema.ts
src/lib/state/: Auth.ts  Auth.tsx  Cache.ts  Channels.ts  Channels.tsx  Loading.tsx  Members.tsx  Messages.ts  Messages.tsx  Nicknames.ts  Notifications.ts  Popouts.tsx  ServerArrangement.ts  Servers.ts  Servers.tsx  Translations.ts  Unread.ts  Users.ts  Users.tsx  auth.ts  channels.ts  members.ts  messages.ts  servers.ts  users.ts
src/lib/utils/: ChannelUtils.tsx  Funcs.tsx  JSON.ts  Markdown.tsx  MarkdownAST.ts  MarkdownParser.tsx  MarkdownRenderer.tsx  PermissionUtils.ts  Random.ts  ServerSettings.ts  ServerUtils.tsx  ShikiEditorHighlighter.ts  SlateMarkdownPlugin.ts  Types.ts  UserSettings.ts  UserUtils.tsx  funcs.ts  markdown.ts  types.ts  userSettings.ts
(+85 files in other folders)
